--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>INICIO</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Hola a todos !!!</h1>
